# text-extraction-fastapi

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  gmail_creds.json  gmail_token.pickle  pyproject.toml  requirements.txt
backend/: initial_data.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/endpoints/: client.py  extract_text.py
backend/app/core/: email.py
backend/app/crud/: __init__.py  client.py  textextraction.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/db_models/: client.py  textextraction.py
backend/migrations/: env.py
backend/migrations/versions/: 0672893df0c5_initial_migration.py
