[tool.poetry]
name = "textextraction"
version = "0.1.0"
description = "Text Extraction"

[tool.poetry.dependencies]
python = ">=3.8,<=3.12"
fastapi = "0.111.0"
aiofiles = "23.2.1"
alembic = "1.13.1"
uvicorn = "0.23.1"
aiofiles = "^0.5.0"
psycopg2 = "2 2.9.9"
pdfplumber = "0.11.0"
python-docx = "1.1.2"
uvicorn = "0.29.0"
alembic = "1.13.1"
inflection = "0.5.1"